# hiviewdfx_hiviewdfx_cangjie_wrapper

./: BUILD.gn  README.md  README_zh.md  bundle.json
kit/PerformanceAnalysisKit/: BUILD.gn  index.cj
mock/: ohos.hi_trace_meter.cj  ohos.hilog.cj  ohos.hiviewdfx.cj  ohos.hiviewdfx.hi_app_event.cj
ohos/hi_trace_meter/: BUILD.gn  hi_trace_meter.cj
ohos/hi_tracemeter/: BUILD.gn  hi_trace_meter.cj
ohos/hiappevent/: BUILD.gn  app_event_package_holder.cj  cj_event.cj  cj_event_ffi.cj  cj_hiappevent_log.cj  hi_app_event.cj  utils.cj
ohos/hilog/: BUILD.gn  hilog.cj  hilog_channel.cj
ohos/hiviewdfx/: BUILD.gn  hiviewdfx.cj
ohos/hiviewdfx/hi_app_event/: BUILD.gn  app_event_package_holder.cj  cj_event.cj  cj_event_ffi.cj  cj_hiappevent_log.cj  hi_app_event.cj  utils.cj
test/APILevel21/hiappevent/test/entry/src/main/cangjie/src/: Test_hiappevent.cj  test_list_hiappevent.cj
test/APILevel21/hilog/test/entry/src/main/cangjie/src/: Test_hilog.cj
test/APILevel21/hitracemeter/test/entry/src/main/cangjie/src/: Test_hitracemeter.cj  test_list_hitracemeter.cj
test/APILevel22/hilog/test/: profile.json
test/hiappevent/test/entry/src/main/cangjie/src/: Test_hiappevent.cj
test/hilog/test/entry/src/main/cangjie/src/: Test_hilog.cj  test_list_hilog.cj
test/hitracemeter/test/entry/src/main/cangjie/src/: Test_hitracemeter.cj
test/unittest/: BUILD.gn
test/unittest/ohos/hilog/test/: BUILD.gn  test_hilog.cj
