# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/cangjie/cjc.gni")

ohos_cj_library("ohos.hiappevent") {
  sources = [
    "app_event_package_holder.cj",
    "cj_event.cj",
    "cj_event_ffi.cj",
    "cj_hiappevent_log.cj",
    "hi_app_event.cj",
    "utils.cj",
  ]

  cj_external_deps = [
    "arkui_cangjie_api:ohos.base",
    "cangjie_api:ohos.ffi",
    "cangjie_api:ohos.labels",
  ]

  cj_deps = [
    "../hilog:ohos.hilog",
  ]

  external_deps = [ "hiappevent:cj_hiappevent_ffi" ]

  subsystem_name = "hiviewdfx"
  part_name = "hiviewdfx_cangjie_api"
  lib_name = "ohos.hiappevent"
}
